feat: add new models for users
